# Quantum-Dynamical-Systems

./: GQS.ipynb  README.md  pyproject.toml  requirements.txt
gqs/: entropy.py  gamma.py  operators.py  perturbations.py
src/: __init__.py  distances.py  dynamics.py  gqs.py  plotting.py  states.py
